package DP.Lecture.Abstract_Factory;

public class Test {

  public static void main(String[] args) {

  }

}
