package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum Basic {
  CRUST,
  OIL,
  WATER,
  CHEESE,
  SALT,
}
