package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum NonVegPizzaContents {
  BACON,
  HAM,
  SALAMI,
  MEATBALLS,
  CHICKEN,
  BARBEQUED_MEAT,
  SALMON,
  CHICKEN_TIKKA,
  CHICKEN_KEEMA,
  CHICKEN_SAUSAGE,
  GRILLED_CHICKEN_RASHERS,
  PERI_PERI_CHICKEN, COMPLETE_FIESTA,
  DOUBLE_PEPPER_BARBECUE_CHICKEN,
}
