package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum Sauces {
  CHILI,
  TOMOTO,
  MOZZARELLA_CHEESE,
  FETA,
  PARMESAN,
  CHEDDAR,
  MONTEREY
}
